crates/compiler/snapshots/vue_template_compiler__core__parser__test__bind_dir-7.snap
---
source: src/core/parser.rs
expression: dir

---
Dir:
  name: bind
  argument:
    Dynamic: t
  modifiers: []
  expression:
    content:
      raw: tt
      ops:
        bits: 18
    location:
      start:
        offset: 11
        line: 1
        column: 12
      end:
        offset: 15
        line: 1
        column: 16
  head_loc:
    start:
      offset: 3
      line: 1
      column: 4
    end:
      offset: 10
      line: 1
      column: 11
  location:
    start:
      offset: 3
      line: 1
      column: 4
    end:
      offset: 15
      line: 1
      column: 16

