crates/compiler/snapshots/vue_template_compiler__core__parser__test__dir_parse_error-4.snap
---
source: src/core/parser.rs
expression: dir

---
Dir:
  name: a
  argument: ~
  modifiers:
    - ""
  expression:
    content:
      raw: tt
      ops:
        bits: 18
    location:
      start:
        offset: 9
        line: 1
        column: 10
      end:
        offset: 13
        line: 1
        column: 14
  head_loc:
    start:
      offset: 3
      line: 1
      column: 4
    end:
      offset: 8
      line: 1
      column: 9
  location:
    start:
      offset: 3
      line: 1
      column: 4
    end:
      offset: 13
      line: 1
      column: 14

